--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "functions": {
-    "api/auth/[...auth]": {
+    "api/auth/[...nextauth]": {
       "memory": 3008,
       "maxDuration": 900
     }
