--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "functions": {
-    "api/auth/[...nextauth]/route.js": {
+    "app/api/auth/[...nextauth]/route.js": {
       "memory": 3008,
       "maxDuration": 900
     }
